tests/ui/attributes/nonterminal-expansion.stderr
error: expected unsuffixed literal or identifier, found `n!()`
  --> $DIR/nonterminal-expansion.rs:5:22
   |
LL | / macro_rules! pass_nonterminal {
LL | |     ($n:expr) => {
LL | |         #[repr(align($n))]
   | |                      ^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `pass_nonterminal!`
...
LL |   pass_nonterminal!(n!());
   |   ----------------------- in this macro invocation

error[E0693]: incorrect `repr(align)` attribute format: `align` takes exactly one argument in parentheses
  --> $DIR/nonterminal-expansion.rs:5:16
   |
LL | / macro_rules! pass_nonterminal {
LL | |     ($n:expr) => {
LL | |         #[repr(align($n))]
   | |                ^^^^^^^^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `pass_nonterminal!`
...
LL |   pass_nonterminal!(n!());
   |   ----------------------- in this macro invocation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0693`.
